[gd_scene load_steps=2 format=3 uid="uid://cjxpkhtrwyhyp"]

[ext_resource type="Script" path="res://parts/day10.gd" id="1_4t4ae"]

[node name="Day10" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1080.0
offset_bottom = 720.0
script = ExtResource("1_4t4ae")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.984314, 0.54902, 0.768627, 1)

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 306.0
offset_top = 479.0
offset_right = 720.0
offset_bottom = 564.0
text = "Click me
Ends game."

[node name="Reset" type="Button" parent="."]
layout_mode = 0
offset_left = 928.0
offset_top = 121.0
offset_right = 1072.0
offset_bottom = 228.0
text = "Reset"

[node name="Counter" type="Label" parent="."]
layout_mode = 0
offset_left = 816.0
offset_top = 2.0
offset_right = 1080.0
offset_bottom = 62.0
theme_override_font_sizes/font_size = 29
text = "Game is: 10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameEnter" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 582.0
offset_right = 1048.0
offset_bottom = 710.0
text = "Pretend text exists here."

[node name="Which game number" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 203.0
offset_right = 228.0
offset_bottom = 370.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Reset" to="." method="_on_reset_pressed"]
